objects/amazonconnect__AC_ContactTraceRecord__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__AWSAccountId__c</fullName>
        <label>AWS Account Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AfterContactWorkDuration__c</fullName>
        <label>After Contact Work Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AfterContactWorkEndTimestamp__c</fullName>
        <label>After Contact Work End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AfterContactWorkStartTimestamp__c</fullName>
        <label>After Contact Work Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentARN__c</fullName>
        <label>Agent ARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentConnectedToAgentTimestamp__c</fullName>
        <label>Agent Connected To Agent Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentConnectionAttempts__c</fullName>
        <label>Agent Connection Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentCustomerHoldDuration__c</fullName>
        <label>Agent Customer Hold Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentHierarchyGroups__c</fullName>
        <label>Agent Hierarchy Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentInteractionDuration__c</fullName>
        <label>Agent Interaction Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentLongestHoldDuration__c</fullName>
        <label>Agent Longest Hold Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentNumberOfHolds__c</fullName>
        <label>Agent Number Of Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentRoutingProfileARN__c</fullName>
        <label>Agent Routing Profile ARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentRoutingProfileName__c</fullName>
        <label>Agent Routing Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentUsername__c</fullName>
        <label>Agent Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Attributes__c</fullName>
        <label>Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Channel__c</fullName>
        <label>Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VOICE</fullName>
                </value>
                <value>
                    <fullName>CHAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__ConnectedToSystemTimestamp__c</fullName>
        <label>Connected To System Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactChannel</label>
        <referenceTo>amazonconnect__AC_ContactChannels__c</referenceTo>
        <relationshipLabel>AC Contact Trace Records</relationshipLabel>
        <relationshipName>Contact_Trace_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <externalId>true</externalId>
        <label>ContactId</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DisconnectTimestamp__c</fullName>
        <label>Disconnect Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__InitialContactId__c</fullName>
        <label>Initial ContactId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__InitiationTimestamp__c</fullName>
        <label>Initiation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Initiation_Method__c</fullName>
        <label>Initiation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INBOUND</fullName>
                </value>
                <value>
                    <fullName>OUTBOUND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__InstanceARN__c</fullName>
        <label>Instance ARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__LastUpdateTimestamp__c</fullName>
        <label>Last Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__NextContactId__c</fullName>
        <label>Next ContactId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__NumberOfHolds__c</fullName>
        <label>Number Of Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__PhoneCall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PhoneCall</label>
        <referenceTo>amazonconnect__AC_PhoneCall__c</referenceTo>
        <relationshipName>Contact_Trace_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__PreviousContactId__c</fullName>
        <label>Previous ContactId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueARN__c</fullName>
        <label>Queue ARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueDequeueTimestamp__c</fullName>
        <label>Queue Dequeue Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueDuration__c</fullName>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueEnqueueTimestamp__c</fullName>
        <label>Queue Enqueue Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueName__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RecordingDeletionReason__c</fullName>
        <label>Recording Deletion Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RecordingLocation__c</fullName>
        <label>Recording Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RecordingStatus__c</fullName>
        <label>Recording Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVAILABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__SystemEndpointAddress__c</fullName>
        <label>System Endpoint Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__TransferCompletedTimestamp__c</fullName>
        <label>Transfer Completed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__TransferredToEndpoint__c</fullName>
        <label>Transferred To Endpoint</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AC Contact Trace Record</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTR {000000000}</displayFormat>
        <label>Contact Trace Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Trace Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>